# game-session-service

./: .gitignore  Dockerfile  GameSessionDAO.py  README.md  alembic.ini  default.env  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  example.env  expired_sessions.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  session_app.py
.github/: renovate.json
.github/workflows/: run-test.yaml
alembic/: env.py
alembic/versions/: d7e20e65228a_initial_migration.py
app/: config.py  exceptions.py  expired_sessions.py  expired_sessions_cleaner.py  game_session_logger.py  main_app.py  manage.py  test_main.http
app/DTOs/: game_session.py  users.py
app/api/v1/: dependencies.py
app/api/v1/DTOs/: game_session.py  session.py
app/api/v1/handlers/: limiter.py
app/api/v1/handlers/internal/: expired_sessions.py  game_sessions.py  middleware.py
app/api/v1/services/: auth_service.py  sessions_service.py
app/core/: config.py  database.py  limiter.py  logging.py  password_utils.py  redis.py
app/core/middlewares/: metrics_middleware.py  request_id_middleware.py
app/database/: GameSessionDAO.py  utils.py
app/database/alembic/: env.py
app/database/alembic/versions/: 4cc5c355182a_user_table_added.py  6cc6b9a26834_added_platform_field_to_game_session_.py  ba3ca466f77f_initial_migration.py  e9bdaa05c0c5_added_last_heartbit_field.py
app/database/dao/: GameSessionDAO.py  UsersDAO.py  game_session_dao.py  session_dao.py  users_dao.py
app/database/dao/redis/: game_session_cache_dao.py  session_cache_dao.py
app/database/tables/: User.py  models.py
app/handlers/: dependencies.py  game_session_logger.py  limiter.py  main_app.py  metrics.py  redis.py  schemas.py  users.py  utils.py  validation.py
app/handlers/api/v1/: game_sessions.py  users.py
app/handlers/api/v1/api_spec/: game_sessions.py  users.py
app/handlers/api/v1/schemas/: game_sessions.py  users.py
app/handlers/internal/: expired_sessions.py  game_sessions.py  metrics.py  middleware.py  redis_utls.py  schemas.py  utils.py
app/handlers/internal/v1/: game_sessions.py
app/handlers/internal/v1/api_spec/: game_sessions.py
app/middlewares/: metrics.py
app/scripts/: manage_app.py  setup_env.py
app/services/: auth_service.py  sessions_service.py
docs/: game_session_logger.http  setup-env.md
tests/: conftest.py  factories.py  test_game_session_dao.py  test_session.py
tests/integration/: conftest.py  test_session.py
tests/unit/: conftest.py  test_game_session_dao.py
